--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
+
 :root {
     /* Colours */
-    --colour-bg: rgb(244, 243, 249);
+    --colour-bg: #A3C1D1;
     --colour-text: rgb(32, 32, 32);
 
     /* Typography */
     font-family: colfax-web, sans-serif;
     font-weight: 400;
     font-style: normal
-        /* --font-display: 'Lora', 'serif';
-    --font-body: 'Josefin Sans', sans-serif; */
+
 
         /* body = tag
     .body = class
      #body = id */
+}
+
+
+body {
+
+    background-color: var(--colour-bg);
+    color: var(--colour-text);
+    font-family: var(--font-body);
+    /* text-align: center; */
 
 }
 
+.top-navbar {
+    background-color: var(--colour-bg);
+        /* background-color: black; */
+}
 
 .product {
     background-color: yellow;
