--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ body {
 }
 
 .top-navbar {
+    justify-content: center;
     background-color: var(--colour-bg);
-    display: flex;
+    display: flex
+    
         /* background-color: black; */
 }
 
