--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 :root {
     /* Colours */
     --colour-bg: #A3C1D1;
@@ -62,13 +59,15 @@ body {
 
 
 .sidebar-container{
+    writing-mode: vertical-rl;
     display: flex;
+    flex-wrap:wrap;
     flex-direction: row;
-    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .sidebar {
-    flex-basis: 40rem;
+    flex-basis: 20rem;
     flex-grow: 1; 
 }
 
@@ -111,6 +110,7 @@ body {
 }
 
 .products-list {
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
