--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,24 @@ body {
     width: 10rem;
 }
 
-.top-navbar {
+/* .top-navbar { SS
     justify-content: center;
     background-color: var(--colour-bg);
     display: flex;
     top: 8em;
     right: 8em;
+} */
+
+.top-navbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.cluster>* {
+    margin: 0.5rem;
 }
 
 .bottom-navbar {
@@ -64,7 +76,7 @@ body {
 
 }
 
-
+/* 
 .sidebar-container {
     display: block;
     writing-mode: vertical-lr;
@@ -72,19 +84,21 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 1rem;
-}
-
-/* .sidebar {
-    display: block;
-    flex-basis: 20rem;
-    flex-grow: 1;
-    height: 20rem;
 } */
 
+.sidebar {
+    /* display: block; */
+    flex-basis: 20rem;
+    flex-grow: 1;
+
+    /* height: 20rem; */
+}
+
 .not-sidebar {
+
     flex-basis: 0;
     flex-grow: 999;
-    min-width: 50%;
+    /* min-width: 50%; */
 }
 
 /* Tried to implement a child selector to colour the banners */
@@ -93,39 +107,45 @@ body {
 
 }
 
-.products-list-container {
+.Group-1{
+    margin-top: 100px;
+    display:flex;
+    justify-content:space-evenly;
+    flex-wrap:wrap; 
+  }
+  
+  .Group-2{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:20px;
+  }
+    
+  .product-card {
+    padding:20px;
+    margin-bottom:20px;
+    justify-self: center;
+  }
+    
+  .product-card > img{
+    width:100%;
+    max-width:400px;
+  }
+    
+  .Group-1 > .product-card {
+    width:400px;
+  }
 
-}
 
-.products-list {
-    justify-content: center;
+/* .img-container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-
-}
-
-
-.product {
-    background-color: rgb(255, 147, 7);
-    margin: 0.5rem; 
-    padding: 1rem;
-}
+    flex-direction: row;
+    margin:  1%;
+} */
 
 
-.img-container {
-    max-width: 400px;
-}
-
-.img-container>img {
+/* .img-container>img {
     width: 100%;
-    display: flex;
-}
-
-.img-container>img {
-    /* background-color: red; */
-    width: 100%;
-}
+} */
 
 
 
