--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
     /* Colours */
-    --colour-bg: #A3C1D1;
+    --colour-bg: #e5e9ec;
     --colour-text: #000000;
     --colour-primary: #394149;
     --colour-secondary: white;
@@ -248,23 +248,45 @@ li a:hover {
 
 }
 
-.grid-layout {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+
+.product-card a{
+    width: 100% !important;
+    height: 100% !important;
+  }
+  
+
+.product-layout {
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
     padding: 1em;
 }
 
 
 .product-card {
-    padding: 0.8 em;
-    margin-bottom: 0.8 em;
+    padding: 1.5rem;
     justify-self: center;
+    width: 20rem;
+    flex-direction: column;
+    background-color: #ffffff;
+    display: flex;
+    flex-wrap: nowrap;
+    flex: 0 1;
+    gap: 2rem;
+
 }
 
 .product-card>img {
     width: 100%;
     max-width: 30em;
+}
+
+.product-card .product-description{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 1rem;
 }
 
 
@@ -291,3 +313,4 @@ li a:hover {
     padding-top: 1em;
     padding-bottom: 1em;
 }
+
