--- a/css/style.css
+++ b/css/style.css
@@ -313,13 +313,13 @@ li a:hover {
 
 
 .footer-container > *{
-    display: inline;
+    display: inline-flex;
     margin:1em;
 }
 
 #footerlogo{
     background-color: red;
-    align-items: center;
+    align-items: end;
 }
 
 /* .footer > * {
