--- a/css/style.css
+++ b/css/style.css
@@ -325,12 +325,13 @@ li a:hover {
 
 .main-footer-container ul {
     flex-grow: 1;
-    text-align: end;
+    text-align: start;
 }
 
 .footer-nav li {
     padding: 0 .5em;
 }
+
 
 
 /* .footer-container {
