--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --colour-text: #777;
     --colour-primary: #394149;
     --colour-secondary: white;
+    --colour-tertiary: #333;
     --colour-accent: #F56526;
 
 
@@ -42,8 +43,6 @@ body {
 
 }
 
-
-
 .header {
     background: var(--colour-accent);
     text-align: center;
@@ -51,6 +50,36 @@ body {
     z-index: 999;
     width: 100%;
 }
+
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.title {
+    font-size: 1.5rem;
+}
+
+.title span {
+    font-weight: 300;
+    display: block;
+    font-size: 1.5em;
+    margin: 0em 0em 0.5em 0.1em;
+}
+
+@media (min-width: 60rem){
+    .title{
+        font-size: 2.7rem;
+    }
+
+}
+
 
 
 .nav-toggle {
@@ -504,6 +533,39 @@ label {
 }
 
 
+
+
+
+
+/* ************************************************************ */
+
+
+.btn-hero {
+    margin-top: 1em;
+    display: inline block;
+    font-size: 1.2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-width: 2px;
+    border-style: solid;
+    padding: .5em 1.75em;
+}
+
+.btn-hero-accent {
+    color: var(--colour-text);
+    border-color: var(--colour-text);
+
+}
+
+.btn-hero-accent:hover,
+.btm-hero-accent:focus {
+    background-color: var(--colour-accent);
+
+}
+
+
+
+
 .buttons {
     display: flex;
     justify-content: right;
@@ -516,6 +578,10 @@ label {
     border-radius: 2rem;
     font-size: 0.9rem;
 }
+
+
+
+
 
 
 .btn-primary:hover {
@@ -577,4 +643,24 @@ label {
     background-color: #F3F8FF;
     border: 2px solid #92BEFF;
     box-shadow: 0px 0px 5px rgb(189, 213, 249);
+}
+
+
+/* Hero Home */
+
+.home-hero {
+    background-image: url(/assets/images/velvet_morning_gorilla.jpg);
+    padding: 10em 0;
+    color: var(--colour-text);
+    background-size: cover;
+    background-position: center;
+}
+
+
+@media (min-width: 60rem){
+    .home-hero{
+    height: 100vh;
+    padding-top: 35vh;
+    }
+
 }
